--- a/white.ini
+++ b/white.ini
@@ -10,8 +10,12 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/wgetnz/chatgpt/main/xuniji.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/DirectDomain.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/fengbird/chatgpt-openclash/main/xuniji.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/fengbird/chatgpt-openclash/main/DirectDomain.list
+ruleset=🎯 全球直连,rules/ACL4SSR/Clash/LocalAreaNetwork.list
+ruleset=🎯 全球直连,rules/ACL4SSR/Clash/ChinaDomain.list
+ruleset=🎯 全球直连,rules/ACL4SSR/Clash/ChinaCompanyIp.list
+ruleset=🎯 全球直连,[]GEOIP,CN
 ;设置规则标志位
 
 ;设置分组标志位
