--- a/white.ini
+++ b/white.ini
@@ -16,6 +16,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/fengbird/chatgpt-ope
 
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 ;设置分组标志位
 
