--- a/white_v1.ini
+++ b/white_v1.ini
@@ -15,9 +15,8 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/fengbird/chatgpt-ope
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]
 ;设置分组标志位
 
 enable_rule_generator=true
