--- a/white_v5.ini
+++ b/white_v5.ini
@@ -11,11 +11,13 @@
 
 ;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/fengbird/chatgpt-openclash/main/DirectDomain_v1.list
+ruleset=😈 资源下载,https://raw.githubusercontent.com/fengbird/chatgpt-openclash/main/resource_download.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/fengbird/chatgpt-openclash/main/xuniji.list
 ;设置规则标志位
 
 ;设置分组标志位
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`
+custom_proxy_group=😈 资源下载`select`[]DIRECT`.*
 custom_proxy_group=🚀 节点选择`select`[]DIRECT`.*
 ;设置分组标志位
 
